# cambrige-course-code

./: .gitignore  devenv.nix
db/sql/supo1/: climb.sql  experiment.sql
db/sql/ticks/: DBQ1.sql  DBQ1.txt  DBQ2.sql  DBQ2.txt  DBQ3-bu.sql  DBQ3.sql  DBQ3.txt
db/sql/ticks/db/: README.txt  movies-original.tinydb.json  movies.neo4j.dump  movies.sql  movies.sqlite
graphics/tick1/: basic_scene.xml  basic_scene2.xml  bumpy.xml
graphics/tick1/src/uk/ac/cam/cl/gfxintro/ws423/tick1/: BumpySphere.java  Camera.java  ColorRGB.java  Plane.java  PointLight.java  Ray.java  (+9 more)
ocaml/databases/lib/: dune
ocaml/databases/test/: dune
ocaml/foundations_of_computing/: dune-project
ocaml/foundations_of_computing/lib/: dune  foundations_of_computing.ml
ocaml/foundations_of_computing/test/: dune
ocaml/langs/ast-basics/: dune-project
ocaml/langs/ast-basics/lib/: dune  l2.ml
ocaml/langs/ast-basics/test/: dune
ocaml/langs/lang/: cspell.json  dune-project
ocaml/langs/lang/lib/: lang.ml
ocaml/langs/trivial-parser/: dune-project
ocaml/langs/trivial-parser/test/: dune
ocaml/ocaml_problems/lib/: dune  ocaml_problems.ml  scratch.ml
ocaml/ws423/: dune-project
ocaml/ws423/lib/: algebra.ml  arith.ml  dune
ocaml/ws423/test/: dune
pac/: Example.java
pac/uk/ac/cam/ws423/prejava/ex1/: PackedLong.java  TestBit.java
scratch/ocaml/databases/: dune-project
scratch/ocaml/ocaml_problems/lib/: ocaml_problems.ml  scratch.ml
scratch/ocaml/ws423/lib/: algebra.ml
scratches/qm-method/: Cargo.toml  cspell.json
scratches/qm-method/src/: main.rs
sql/: hello-world.db
